# xclv1update

./: .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: common.init.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/test/: 00_setup_env_native_multiprocess.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: README.md  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  (+1 more)
depends/: README.md  description.md
doc/: README.md  REST-interface.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-projectexcelsior.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  projectexcelsior-cli.1  projectexcelsior-qt.1  projectexcelsior-tx.1  projectexcelsior-wallet.1  projectexcelsiord.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  clientversion.cpp  init.cpp  mine.sh  netaddress.h  pow.cpp  txdb.cpp  validation.cpp
test/: README.md  get_previous_releases.py
(+178 files in other folders)
